--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 
     <link rel="shortcut icon" href="./source/Pied_Piper.jpg"> 
-    <title>Kenny Kong's Homepage</title>
+    <title>Shuaiqi Wang's Homepage</title>
     <link href="./source/css" rel="stylesheet" type="text/css">
   </head>
   <body>
