--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <tr>
                   <td style="vertical-align: top;"><b>Email</b></td>
                   <td style="padding-left: 50px;">
-                    wangshuaiqi@sjtu.edu.com<br>
+                    wangshuaiqi@sjtu.edu.cn<br>
                   </td>
                 </tr>
                 <tr>
