--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="./source/klk.jpg" width="100%">
           </td>
           <td width="60%" valign="middle">
-            <p align="center"><name>Shuaiqi Wang</name></p>
+            <p align="center"><name>Shuaiqi Waaaaaa</name></p>
             <p>Hi, my name is Shuaiqi Wang. I am now a senior student, advised by <a href="https://mamouras.web.rice.edu/">Konstantinos Mamouras</a>, at the Department of Computer Science, Rice University.</p>
             <p>Before I joined Rice, I got my bachelor degree from Shanghai Jiao Tong University and was a member of Zhiyuan College.</p>
             <p align="center">
