--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 
     <link rel="shortcut icon" href="./source/Pied_Piper.jpg"> 
-    <title>Shuaiqi Wang's Homepage</title>
+    <title>Kenny Kong's Homepage</title>
     <link href="./source/css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -47,8 +47,8 @@
             <img src="./source/klk.jpg" width="100%">
           </td>
           <td width="60%" valign="middle">
-            <p align="center"><name>Shuaiqi Waaaaaa</name></p>
-            <p>Hi, my name is Shuaiqi Wang. I am now a senior student, advised by <a href="https://mamouras.web.rice.edu/">Konstantinos Mamouras</a>, at the Department of Computer Science, Rice University.</p>
+            <p align="center"><name>Lingkun Kong</name></p>
+            <p>Hi, my name is Lingkun Kong. I am now a Ph.D. student, advised by <a href="https://mamouras.web.rice.edu/">Konstantinos Mamouras</a>, at the Department of Computer Science, Rice University.</p>
             <p>Before I joined Rice, I got my bachelor degree from Shanghai Jiao Tong University and was a member of Zhiyuan College.</p>
             <p align="center">
               <a href="source/Lingkun_CV.pdf">CV</a> &nbsp;/&nbsp;
@@ -71,15 +71,15 @@
                 <tr>
                   <td style="vertical-align: top;"><b>Email</b></td>
                   <td style="padding-left: 50px;">
-                    wangshuaiqi@sjtu.edu.cn<br>
+                    klk[at]rice[dot]edu<br>
                   </td>
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><b>Address</b></td>
                   <td style="padding-left: 50px;">
-                    X-19,
-                    Dongchuan Road 800,
-                    Minhang, Shanghai, China.
+                    Duncan Hall 3011,
+                    6100 Main St. MS-132,
+                    Houston, TX, 77005.
                   </td>
                 </tr>
               </tbody>
