--- a/index.html
+++ b/index.html
@@ -330,10 +330,8 @@
 </script>
 
 
-<div align="center"><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3213469&c=9640720" alt="AmazingCounters.com"></a></div>
-
 <div align="center">
-<a href="https://clustrmaps.com/site/19kj1" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=lL6Yh9QY0MmOMjswDS00tXW-r7Js-4zJvgkkngzXrh8&cl=ffffff"></a></div>
+<a href="https://clustrmaps.com/site/1axd9"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=zIYxO-RPwZrfEBJNObfXjUR1E7xTvkeI0hn47T9w82M&cl=ffffff" /></a></div>
 
 
 </body></html>
