--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="40%">
-            <img src="./source/klk.jpg" width="100%">
+            <img src="./source/wsq1.jpg" width="100%">
           </td>
           <td width="60%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
