--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <td>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
-          <td width="40%">
+          <td width="25%">
             <img src="./source/wsq1.jpg" width="100%">
           </td>
-          <td width="60%" valign="middle">
+          <td width="70`5%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
             <p>Hi, my name is Shuaiqi Wang. I am now a senior student, advised by <a href="https://mamouras.web.rice.edu/">Konstantinos Mamouras</a>, at the Department of Computer Science, Rice University.</p>
             <p>Before I joined Rice, I got my bachelor degree from Shanghai Jiao Tong University and was a member of Zhiyuan College.</p>
