--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           </td>
           <td width="70`5%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
-            <p>Hi, my name is Shuaiqi Wang. I am now a senior student, advised by <a href="https://mamouras.web.rice.edu/">Konstantinos Mamouras</a>, at the Department of Computer Science, Rice University.</p>
-            <p>Before I joined Rice, I got my bachelor degree from Shanghai Jiao Tong University and was a member of Zhiyuan College.</p>
+            <p>Hi, my name is Shuaiqi Wang. I am now a senior student in Shanghai Jiao Tong University, China, majoring in Computer Science. I am also a member of Zhiyuan Honors Program of Engineering.
+			</p>
+            <p>I have joined the Intelligent Internet of Things (<a href="http://iiot.sjtu.edu.cn/index.html">IIOT</a>) Research Center since 2017, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang.</p>
             <p align="center">
               <a href="source/Lingkun_CV.pdf">CV</a> &nbsp;/&nbsp;
               <a href="blog/index.html">Blogs</a> &nbsp;/&nbsp;
