--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
           <td width="25%">
             <img src="./source/wsq1.jpg" width="100%">
           </td>
-          <td width="70`5%" valign="middle">
+          <td width="75%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
             <p>Hi, my name is Shuaiqi Wang. I am now a senior student in Shanghai Jiao Tong University, China, majoring in Computer Science. I am also a member of Zhiyuan Honors Program of Engineering.
 			</p>
             <p>I have joined the Intelligent Internet of Things (<a href="http://iiot.sjtu.edu.cn/index.html">IIOT</a>) Research Center since 2017, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang.</p>
             <p align="center">
-              <a href="source/Lingkun_CV.pdf">CV</a> &nbsp;/&nbsp;
-              <a href="blog/index.html">Blogs</a> &nbsp;/&nbsp;
+              <a href="source/CV_v1.pdf">CV</a>
+              <!--<a href="blog/index.html">Blogs</a> &nbsp;/&nbsp;
               <a href="https://github.com/Ohyoukillkenny">GitHub</a> &nbsp;/&nbsp;
-              <a href="https://www.linkedin.com/in/lingkun-kong-303295117/">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/lingkun-kong-303295117/">LinkedIn</a>-->
             </p>
           </td>
           
@@ -78,9 +78,9 @@
                 <tr>
                   <td style="vertical-align: top;"><b>Address</b></td>
                   <td style="padding-left: 50px;">
-                    X-19,
-                    Dongchuan Road 800,
-                    Minhang, Shanghai, China.
+                    1-415 SEIEE Building,
+                    800 Dongchuan Road,
+                    Shanghai 200240, P. R. China.
                   </td>
                 </tr>
               </tbody>
