--- a/index.html
+++ b/index.html
@@ -95,36 +95,36 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Education</heading>
-            <p>
+            <!--<p>
               <strong>Rice University</strong>, USA, from Aug. 2018 until now.<br>
               Department of Computer Science
-            </p>
+            </p>-->
             <p>
-              <strong>Shanghai Jiao Tong University</strong>, China, from Sep. 2014 to Jun. 2018<br>
-              B.Sc., Department of Computer Science & Zhiyuan College
+              <strong>Shanghai Jiao Tong University</strong>, China, from Sep. 2016 to present<br>
+              Department of Computer Science & Zhiyuan College
             </p>
-            <p>
+            <!--<p>
               <strong>Cornell University</strong>, USA, from Jun. 2017 to Aug. 2017<br>
               Visiting Student, Computer Science Department     
-            </p>
+            </p>-->
           </td>
         </tr>
         </tbody></table>
 
         <!-- Research -->
-        <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
-            <heading>Research</heading>
-            <p>My current research interest focuses on:</p>
+            <heading>Research Interests</heading>
+            <p>My current research interests lie in:</p>
             <ul>
-            <li>Distributed System</li>
-            <li>Data Mining</li>
+            <li>Wireless Networks</li>
+            <li>Social Networks</li>
             </ul>
             <p>Actually, I am interested in all research topics related with building fantastic systems and interesting tools.</p>
           </td>
         </tr>
-        </tbody></table> -->
+        </tbody></table>
 
         <!-- Publication -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
