--- a/index.html
+++ b/index.html
@@ -116,17 +116,18 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Research Interests</heading>
-            <p>My current research interests lie in:</p>
+            <p>My current research interests lie in but not limit to:</p>
             <ul>
             <li>Wireless Networks</li>
             <li>Social Networks</li>
             </ul>
-            <p>Actually, I am interested in all research topics related with building fantastic systems and interesting tools.</p>
+            <p>More broadly, I am interested in all research topics concerned with fundamental and theoretical problems in computer science, including network science, machine learning theory, computing theory and so on.</p>
           </td>
         </tr>
         </tbody></table>
 
         <!-- Publication -->
+        <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
@@ -140,12 +141,13 @@
           </td>
         </tr>
         </tbody></table>
+    	-->
 
         <!-- Project -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
-            <heading>Project</heading>
+            <heading>Research Experiences</heading>
           </td>
         </tr>
         </tbody></table>
@@ -155,9 +157,11 @@
           <td width="25%"><img src="./source/bancor.jpg" width="160" height="106"></td>
           <td width="75%" valign="top">
           <p>
-            <a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a>
+            <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
             <br>
-            <strong>Lingkun Kong</strong>, Emin Gun Sirer, Jan. 2018 <br>
+            <strong>Distributed Multicast Tree Construction in Wireless Sensor Networks with Unreliable Links</strong><br>
+            <br>
+            <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present <br>
             </p><p><br>
             This work is advised by Prof. <a href="http://www.cs.cornell.edu/people/egs/">Emin Gun Sirer</a>.
             <br>
