--- a/index.html
+++ b/index.html
@@ -158,13 +158,14 @@
           <td width="75%" valign="top">
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
-            <br>
-            <strong>Distributed Multicast Tree Construction in Wireless Sensor Networks with Unreliable Links</strong><br>
+            <strong>Distributed Multicast Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
             <br>
             <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present <br>
-            </p><p><br>
-            This work is advised by Prof. <a href="http://www.cs.cornell.edu/people/egs/">Emin Gun Sirer</a>.
+            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>, <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a> and <a href="https://engineering.purdue.edu/~linx/">Xiaojun Lin</a>.
             <br>
+            </p><p><br>
+            <!--This work is advised by Prof. <a href="http://www.cs.cornell.edu/people/egs/">Emin Gun Sirer</a>.
+            <br>-->
               <a href="https://www.bancor.network/">Bancor</a> holds the record for the biggest crowd-funding, ever, in the history of mankind. However, the robustness and efficiency of Bancor remain to be explored. Bancor also has several flaws due to its design principle.
             <br>
               Therefore, we build a simulator, and leveraging which, we find that Bancor protocol is flawed in three aspects: 
