--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/bancor.jpg" width="160" height="106"></td>
+          <td width="25%"><img src="./source/WSN.pdf" width="160" height="160"></td>
           <td width="75%" valign="top">
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
@@ -166,11 +166,11 @@
             </p>
 
             <p>
-            	Wireless sensor networks (WSN) has been recognized as one of the most important technology for the 21st century, and in WSNs, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable,  almost all of previous works on constructing the multicast tree neglect this and assume the links are reliable. Motivated by this, we, for the first time, model the unreliability in terms of probability and design an algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
+            	Wireless sensor networks (WSN) has been recognized as one of the most important technology for the 21st century, and in WSNs, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable,  almost all of previous works on constructing the multicast tree neglect this and assume the links are reliable. Motivated by this, we model the unreliability in terms of probability and, for the first time, design an algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
             </p>
 
             <p>
-            	aaa
+            	In this research, I finish almost all parts of it independently, including modeling, theoretical analysis, algorithm design, performance analysis as well as paper writing. Moreover, this research requires strong mathematical background, and in the 30-page paper I write, more than half are theoretical analysis and mathematical derivations.
             </p>
 
             <!--This work is advised by Prof. <a href="http://www.cs.cornell.edu/people/egs/">Emin Gun Sirer</a>.
