--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
             	In this research, I finish almost all parts of it independently, including modeling, theoretical analysis, algorithm design, performance analysis as well as paper writing. Moreover, this research requires strong mathematical background, and in the 30-page paper I write, more than half are theoretical analysis and mathematical derivations.
             </p>
 
+            <p>
+            	We are going to submit our work to <strong>SIGMETRICS 2020</strong>.
+            </p>
+
             <!--This work is advised by Prof. <a href="http://www.cs.cornell.edu/people/egs/">Emin Gun Sirer</a>.
             <br>
               <a href="https://www.bancor.network/">Bancor</a> holds the record for the biggest crowd-funding, ever, in the history of mankind. However, the robustness and efficiency of Bancor remain to be explored. Bancor also has several flaws due to its design principle.
