--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/WSN.jpg" width="160" height="160"></td>
+          <td width="25%"><img src="./source/WSN.png" width="160" height="160"></td>
           <td width="75%" valign="top">
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
