--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/TON.png" width="160" height="106"></td>
+          <td width="25%"><img src="./source/WSN_1.png" width="160" height="160"></td>
           <td width="75%" valign="top">
           <p>
             <a href="https://github.com/Ohyoukillkenny/EBM"><strong>Evolving Bipartite Model Reveals the Bounded Weights in Social Networks: A Case Study in Recommendation Networks</strong></a>
@@ -216,7 +216,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/kdd.png" width="160" height="106"></td>
+          <td width="25%"><img src="./source/WSN_4.png" width="160" height="180"></td>
           <td width="75%" valign="top">
           <p>
             <a href="source/www.pdf"><strong>MSM: A Multi-entity Scholarly Model for Systematic Understanding of Evolving Scholarly Networks</strong></a>
@@ -236,7 +236,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/topicmap.png" width="160" height="160"></td>
+          <td width="25%"><img src="./source/TON.png" width="160" height="80"></td>
           <td width="75%" valign="top">
           <p>
             <a href="http://acemap.sjtu.edu.cn/"><strong>Acemap: Academic Map System</strong></a>
