--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/WSN_1.png" width="160" height="160"></td>
+          <td width="25%"><img src="./source/WSN_full.png" width="160" height="160"></td>
           <td width="75%" valign="top">
           <p>
             <a href="https://github.com/Ohyoukillkenny/EBM"><strong>Evolving Bipartite Model Reveals the Bounded Weights in Social Networks: A Case Study in Recommendation Networks</strong></a>
