--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
         
 
         <!-- Teaching -->
+        <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
@@ -282,26 +283,28 @@
           </td>
         </tr>
         </tbody></table>
+    	-->
 
         <!-- Scholarships -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
-            <heading>Scholarships</heading>
+            <heading>Awards and Scholarships</heading>
             <p>
-              <strong>National Scholarship</strong>, Ministry of Education of China, 2015 and 2017
+              <strong>Zhiyuan College Honors Scholarship</strong>, Shanghai Jiao Tong University, 2016 - 2019
             </p>
             <p>
-              <strong>Scholarship of Outstanding Undergraduates</strong>, Shanghai Jiao Tong University, 2017
+              <strong>Chinese University Student Computer Design Competition, the ﬁrst price</strong>, Ministry of Education of China, 2019
             </p>
             <p>
-              <strong>Zhiyuan Honorary Scholarship</strong>, Shanghai Jiao Tong University, 2015, 2016 and 2017
+              <strong>Academic Excellence Scholarship</strong>, Shanghai Jiao Tong University, 2016 - 2018
             </p>
           </td>
         </tr>
         </tbody></table>
 
         <!-- Awards -->
+        <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
@@ -315,6 +318,7 @@
           </td>
         </tr>
         </tbody></table>
+    	-->
 
 
         <!-- More about Me -->
