--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/TON0.png" width="170" height="108"></td>
+          <td width="25%"><img src="./source/TON0.png" width="170" height="118"></td>
           <td width="75%" valign="top">
           <p>
             <a href="https://github.com/Ohyoukillkenny/EBM"><strong>Evolving Bipartite Model Reveals the Bounded Weights in Social Networks: A Case Study in Recommendation Networks</strong></a>
@@ -216,7 +216,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/abstract.png" width="160" height="120"></td>
+          <td width="25%"><img src="./source/abstract.png" width="170" height="130"></td>
           <td width="75%" valign="top">
           <p>
             <a href="source/www.pdf"><strong>MSM: A Multi-entity Scholarly Model for Systematic Understanding of Evolving Scholarly Networks</strong></a>
@@ -236,7 +236,7 @@
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
-          <td width="25%"><img src="./source/overlap.png" width="160" height="93"></td>
+          <td width="25%"><img src="./source/overlap1.png" width="160" height="110"></td>
           <td width="75%" valign="top">
           <p>
             <a href="http://acemap.sjtu.edu.cn/"><strong>Acemap: Academic Map System</strong></a>
