--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
             <strong>Distributed Multicast Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
             <br>
-            <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present <br>
+            <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present 
+            <br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>, <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a> and <a href="https://engineering.purdue.edu/~linx/">Xiaojun Lin</a>.
             <br>
             </p>
@@ -199,10 +200,15 @@
           <td width="25%"><img src="./source/TON0.png" width="170" height="118"></td>
           <td width="75%" valign="top">
           <p>
-            <a href="https://github.com/Ohyoukillkenny/EBM"><strong>Evolving Bipartite Model Reveals the Bounded Weights in Social Networks: A Case Study in Recommendation Networks</strong></a>
+            <a href="./source/Social Network De-anonymization with Communities.pdf"><strong>On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</strong></a>
             <br>
-            <strong>Lingkun Kong</strong>, Xudong Wu, Hongru Zhu, Luoyi Fu, Xinbing Wang, Guihai Chen, Nov. 2017 <br>
-            </p><p><br>
+            Luoyi Fu, <strong>Shuaiqi Wang</strong>, Yichi Zhang, Xinzhe Fu, Xinbing Wang, Songwu Lu, Mar. 2019 - present 
+            <br>
+            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
+            <br>
+            </p>
+
+            <p><br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
             <br>
               Many realistic social networks can be presented by evolving bipartite graphs, in which dynamically added elements are divided into two entities and connected by links through these two entities, such as followees and followers in Twitter networks, authors and scientific topics in scholarly networks, users and items in recommendation networks, and etc. However, when adding weights of edges, i.e., connections between elements, how to mathematically model such evolving social networks, along with quantitative characterizations, remains unexplored.
@@ -219,9 +225,10 @@
           <td width="25%"><img src="./source/abstract.png" width="170" height="130"></td>
           <td width="75%" valign="top">
           <p>
-            <a href="source/www.pdf"><strong>MSM: A Multi-entity Scholarly Model for Systematic Understanding of Evolving Scholarly Networks</strong></a>
+            <a href="source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf"><strong>De-anonymizability of Social Network: Through the Lens of Symmetry
+			</strong></a>
             <br>
-            <strong>Lingkun Kong</strong>, Fengyu Deng, Jiaqi Liu, Jinghao Zhao, Luoyi Fu, Xinbing Wang, Oct. 2017
+            Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Mar. 2019 - Aug. 2019
             <br>
             </p><p><br>
             This work is advised both by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
@@ -239,9 +246,9 @@
           <td width="25%"><img src="./source/overlap10.png" width="160" height="110"></td>
           <td width="75%" valign="top">
           <p>
-            <a href="http://acemap.sjtu.edu.cn/"><strong>Acemap: Academic Map System</strong></a>
+            <a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf"><strong>De-anonymizing Social Networks with Overlapping Community Structur</strong></a>
             <br>
-            <strong>Lingkun Kong</strong>, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~wang-xb/">Xinbing Wang</a>, 2015 - 2017 <br>
+            Luoyi Fu, Jiapeng Zhang, <strong>Shuaiqi Wang</strong>, Xinyu Wu, Zhongzhao Hu, Xinbing Wang, Sep. 2018 - Sep. 2019
             </p><p><br>
               I joined the Acemap group in 2015. My major work in this group focused on:
               <ul>
