--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
-            <heading>Research Experiences</heading>
+            <heading>Selected Research Experiences</heading>
           </td>
         </tr>
         </tbody></table>
@@ -298,13 +298,13 @@
           <td width="100%" valign="middle">
             <heading>Awards and Scholarships</heading>
             <p>
-              <strong>Zhiyuan College Honors Scholarship</strong>, Shanghai Jiao Tong University, 2016 - 2019
+              <strong>Zhiyuan College Honors Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
             <p>
               <strong>Chinese University Student Computer Design Competition, the ﬁrst price</strong>, Ministry of Education of China, 2019
             </p>
             <p>
-              <strong>Academic Excellence Scholarship</strong>, Shanghai Jiao Tong University, 2016 - 2018
+              <strong>Academic Excellence Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
           </td>
         </tr>
@@ -334,10 +334,10 @@
           <td width="100%" valign="middle">
             <heading>More About Me</heading>
             <p>
-              I used to be a table tennis athlete. In 2016, I helped my undergraduate university to win her first championship in Shanghai.
+              Besides computer science, I am also crazy about math. I have taken or audited plenty of courses held by mathematic department, such as abstract algebra and stochastic process. Moreover, I held a seminar discussing fundemental problems in mathematical analysis with a group of talented people when I was a freshman.
             </p>
             <p>
-              I am a crazy NBA basketball fan. Playing basketball is also one of my hobbies.
+              Fascinated by the free thought and infinite possibilities, I enjoy exploring the literary world. My favorite writter is Albert Camus.
             </p>
           </td>
         </tr>
