--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</p>
             <p>I have joined the Intelligent Internet of Things (<a href="http://iiot.sjtu.edu.cn/index.html">IIOT</a>) Research Center since 2017, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang.</p>
             <p align="center">
-              <a href="source/CV_v1.pdf">CV</a>
+              <a href="source/cv.pdf">CV</a>
               <!--<a href="blog/index.html">Blogs</a> &nbsp;/&nbsp;
               <a href="https://github.com/Ohyoukillkenny">GitHub</a> &nbsp;/&nbsp;
               <a href="https://www.linkedin.com/in/lingkun-kong-303295117/">LinkedIn</a>-->
