--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
             </p>
 
             <p>
-            	Wireless sensor networks (WSN) has been recognized as one of the most important technology for the 21st century, and in WSNs, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable,  almost all of previous works on constructing the multicast tree neglect this and assume the links are reliable. Motivated by this, we model the unreliability in terms of probability and, for the first time, design an algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
+            	Wireless sensor networks (WSN) has been recognized as one of the most important technology for the 21st century, and in WSNs, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable,  almost all of previous works on constructing the multicast tree neglected this and assumed the links are reliable. Motivated by this, I Analyzed the effect of unrealiable links on data communication and, for the first time, designed an algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
             </p>
 
             <p>
-            	In this research, I finish almost all parts of it independently, including modeling, theoretical analysis, algorithm design, performance analysis as well as paper writing. Moreover, this research requires strong mathematical background, and in the 30-page paper I write, more than half are theoretical analysis and mathematical derivations.
+            	In this research, I finished almost all parts of it independently, including modeling, theoretical analysis, algorithm design, performance analysis as well as paper writing. Moreover, this research requires strong mathematical background, and in the 30-page paper I wrote, more than half are theoretical analysis and mathematical derivations.
             </p>
 
             <p>
@@ -208,13 +208,14 @@
             <br>
             </p>
 
-            <p><br>
-            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
-            <br>
-              Many realistic social networks can be presented by evolving bipartite graphs, in which dynamically added elements are divided into two entities and connected by links through these two entities, such as followees and followers in Twitter networks, authors and scientific topics in scholarly networks, users and items in recommendation networks, and etc. However, when adding weights of edges, i.e., connections between elements, how to mathematically model such evolving social networks, along with quantitative characterizations, remains unexplored.
-            <br>
-              Motivated by this, we develop a novel evolving bipartite model (EBM), which, based on empirically validated power-law distribution within multiple realistic social networks, discloses that the distribution of total weights given or received by each element in networks is determined by the weighting scale and bounded by certain ceilings and floors.
+            <p>
+              A crucial privacy-driven issue nowadays is reidentifying anonymized social networks by mapping them to correlated cross-domain auxiliary networks, and this issue is also denoted as de-anonymization problem. Although there are several prior works studying on one of the branches of this issue: seedless de-anonymization, they either theoretically derive cost functions without proposing algorithms or propose algorithms without sufficient theoretical rationales supporting the performance guarantee.
             </p>
+
+            <p>
+              To fill this gap, we first derived the cost functions, which is superior to previous ones, as metrics quantifying the structural mismappings between networks based on Maximum A Posteriori estimation in different settings distinguished by the availability of community information. Then we further our theoretical analysis by figuring out the conditions under which minimizing the cost function can perfectly recover the correct mapping. At last we designed algorithms for the ﬁrst time to approximately minimize the proposed MAP-based cost functions. 
+            </p>
+
           <p></p>
           </td>
         </tr>
@@ -230,12 +231,14 @@
             <br>
             Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Mar. 2019 - Aug. 2019
             <br>
-            </p><p><br>
             This work is advised both by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
             <br>
-            Scholarly networks contain massive scholarly information that can be mainly categorized into three entities, i.e., paper, author and topic, which exhibit a co-evolution over time. <br>
-            Though scholarly networks have attracted much attention over the past years, most works focus on single dimension of the network, e.g. citation, collaboration or topic network; while few of them incorporate different kinds of entities into an entirety to generate a systematic understanding of scholarly networks at scale. We bridge this gap by proposing a multi-entity scholarly model (MSM) with succinct theoretical foundation, which amalgamates entities of paper, author and topic into one single framework to simulate interactions among different entities, and thus presenting the co-evolution within scholarly networks.
             </p>
+
+            <p>            
+            Although social network de-anonymization has received intensive study in network science, it remains less understood how network structural features intrinsically affect whether or not the network can be successfully de-anonymized. To find this answer, we analyzed how the symmetry of graphs will affect the de-anonymizability without any network model assumption for the ﬁrst time. Then based on the analysis, we proposed a method to quantify the de-anonymizability of given networks based on concepts of automorphism and homomorphism in the abstract algebra. Finally, we designed an approximate algorithm to estimate de-anonymizability via sampling techniques.
+            </p>
+
           <p></p>
           </td>
         </tr>
@@ -249,13 +252,10 @@
             <a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf"><strong>De-anonymizing Social Networks with Overlapping Community Structur</strong></a>
             <br>
             Luoyi Fu, Jiapeng Zhang, <strong>Shuaiqi Wang</strong>, Xinyu Wu, Zhongzhao Hu, Xinbing Wang, Sep. 2018 - Sep. 2019
-            </p><p><br>
-              I joined the Acemap group in 2015. My major work in this group focused on:
-              <ul>
-              <li>Develop visualizing applications for scholarly information networks and presentation approaches.</li>
-              <li>Implement the recommending algorithm for papers in Acemap, and present the result on website.</li>
-              <li>Build and maintain the server and the back-end for Acemap.</li>
-              </ul>
+            </p>
+
+            <p>
+            Although the seedless de-anonymization problem have been explored by several previous works through various of network models, all those models cannot preciously capture the real social networks. Motivated by this, we adopt a more practical social network model parameterized by overlapping communities, which can serve as side information for de-anonymization. In this work, we derived the cost function of expected number of mismapped users based on Minimum Mean Square Error for the ﬁrst time. Then we proposed an approximate algorithm and ﬁgured out the approximation ratio after simplilfying MMSE by transforming it into a weighted-edge matching problem.
             </p>
           <p></p>
           </td>
