--- a/index.html
+++ b/index.html
@@ -116,12 +116,16 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Research Interests</heading>
-            <p>My current research interests lie in but not limit to:</p>
+            <p>My current research interests span theoretical topics in network science, performance analysis and optimization. I am also interested in applications of these areas.
+            <!--
+            :</p>
             <ul>
             <li>Wireless Networks</li>
             <li>Social Networks</li>
             </ul>
-            <p>More broadly, I am interested in all research topics concerned with fundamental and theoretical problems in computer science, including network science, machine learning theory, computing theory and so on.</p>
+            <p>More broadly, I am interested in all research topics concerned with fundamental and theoretical problems in computer science, including network science, machine learning theory, computing theory and so on.
+            -->
+            </p>
           </td>
         </tr>
         </tbody></table>
