--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <td width="100%" valign="middle">
             <heading>More About Me</heading>
             <p>
-              Besides computer science, I am also crazy about math. I have taken or audited plenty of courses held by mathematic department, such as abstract algebra and stochastic process. Moreover, I held a seminar discussing fundemental problems in mathematical analysis with a group of talented people when I was a freshman.
+              Besides computer science, I am also crazy about math. I have taken or audited plenty of courses held by mathematic department, such as abstract algebra and stochastic process. Moreover, I held a seminar discussing fundamental problems in mathematical analysis with a group of talented people when I was a freshman.
             </p>
             <p>
               Fascinated by the free thought and infinite possibilities, I enjoy exploring the literary world. My favorite writter is Albert Camus.
