--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </p>
 
             <p>
-            	Wireless sensor networks (WSN) has been recognized as one of the most important technology for the 21st century, and in WSNs, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable,  almost all of previous works on constructing the multicast tree neglected this and assumed the links are reliable. Motivated by this, I Analyzed the effect of unrealiable links on data communication and, for the first time, designed an algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
+            	In wireless sensor networks, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable in practice,  almost all previous works on constructing the multicast tree neglected this property. Motivated by this, I Analyzed the effect of unrealiable links on data communication and, for the first time, designed a distributed algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
             </p>
 
             <p>
@@ -213,7 +213,7 @@
             </p>
 
             <p>
-              A crucial privacy-driven issue nowadays is reidentifying anonymized social networks by mapping them to correlated cross-domain auxiliary networks, and this issue is also denoted as de-anonymization problem. Although there are several prior works studying on one of the branches of this issue: seedless de-anonymization, they either theoretically derive cost functions without proposing algorithms or propose algorithms without sufficient theoretical rationales supporting the performance guarantee.
+              A crucial privacy-driven issue nowadays is reidentifying anonymized social networks by mapping them to correlated cross-domain auxiliary networks, and it is also denoted as de-anonymization problem. Although there are several prior works studying on one of the branches of this issue: seedless de-anonymization, they either theoretically derive cost functions without proposing algorithms or propose algorithms without sufficient theoretical rationales supporting the performance guarantee.
             </p>
 
             <p>
