--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Research Interests</heading>
-            <p>My current research interests span theoretical topics in network science, performance analysis and optimization. I am also interested in applications of these areas.
+            <p>My current research interests span theoretical topics including network science, performance analysis, algorithm and optimization. I am also interested in applications of these areas.
             <!--
             :</p>
             <ul>
@@ -162,7 +162,7 @@
           <td width="75%" valign="top">
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
-            <strong>Distributed Multicast Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
+            <strong>Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
             <br>
             <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present 
             <br>
@@ -171,11 +171,11 @@
             </p>
 
             <p>
-            	In wireless sensor networks, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Although wireless communication is notoriously unreliable in practice,  almost all previous works on constructing the multicast tree neglected this property. Motivated by this, I Analyzed the effect of unrealiable links on data communication and, for the first time, designed a distributed algorithm to construct the multicast tree based on unreliable links with high time and energy efficiency.
+            	In wireless sensor networks, multicast tree is the most common structure for the multicasting, an important data transmission pattern. Constructing the minimum multicast tree can be converted to the classical Steiner Tree Problem, which is proved to be NP-complete. Although wireless communication is notoriously unreliable in practice,  almost all previous works on constructing the multicast tree neglected this property. Motivated by this, I Analyzed the effect of unreliable links on data communication and, for the first time, designed a distributed algorithm to construct the approximate Steiner tree based on unreliable links with high time and energy efficiency.
             </p>
 
             <p>
-            	In this research, I finished almost all parts of it independently, including modeling, theoretical analysis, algorithm design, performance analysis as well as paper writing. Moreover, this research requires strong mathematical background, and in the 30-page paper I wrote, more than half are theoretical analysis and mathematical derivations.
+            	In this project, I accomplished all aspects and finally summarized them in a 12-page paper with an 18-page techncial report. Moreover, this research requires strong mathematical background, and the methods involved span mathematical analysis, probability theory, discrete mathematics and so on.
             </p>
 
             <p>
@@ -217,7 +217,11 @@
             </p>
 
             <p>
-              To fill this gap, we first derived the cost functions, which is superior to previous ones, as metrics quantifying the structural mismappings between networks based on Maximum A Posteriori estimation in different settings distinguished by the availability of community information. Then we further our theoretical analysis by figuring out the conditions under which minimizing the cost function can perfectly recover the correct mapping. At last we designed algorithms for the ﬁrst time to approximately minimize the proposed MAP-based cost functions. 
+              To fill this gap, we first derived the cost functions as metrics to quantify the structural mismappings between networks based on Maximum A Posteriori estimation. Then we further our theoretical analysis by figuring out the conditions under which minimizing the cost function can perfectly recover the correct mapping. At last we designed algorithms for the ﬁrst time to approximately minimize the proposed MAP-based cost functions. 
+            </p>
+
+            <p>
+              This work is under minor review in <strong>IEEE/ACM Transactions on Networking</strong>.
             </p>
 
           <p></p>
@@ -242,6 +246,9 @@
             <p>            
             Although social network de-anonymization has received intensive study in network science, it remains less understood how network structural features intrinsically affect whether or not the network can be successfully de-anonymized. To find this answer, we analyzed how the symmetry of graphs will affect the de-anonymizability without any network model assumption for the ﬁrst time. Then based on the analysis, we proposed a method to quantify the de-anonymizability of given networks based on concepts of automorphism and homomorphism in the abstract algebra. Finally, we designed an approximate algorithm to estimate de-anonymizability via sampling techniques.
             </p>
+            <p>
+              This work is submitted to <strong>MobiHoc 2020</strong>.
+            </p>
 
           <p></p>
           </td>
@@ -253,13 +260,16 @@
           <td width="25%"><img src="./source/overlap10.png" width="160" height="110"></td>
           <td width="75%" valign="top">
           <p>
-            <a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf"><strong>De-anonymizing Social Networks with Overlapping Community Structur</strong></a>
+            <a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf"><strong>De-anonymizing Social Networks with Overlapping Community Structure</strong></a>
             <br>
             Luoyi Fu, Jiapeng Zhang, <strong>Shuaiqi Wang</strong>, Xinyu Wu, Zhongzhao Hu, Xinbing Wang, Sep. 2018 - Sep. 2019
             </p>
 
             <p>
-            Although the seedless de-anonymization problem have been explored by several previous works through various of network models, all those models cannot preciously capture the real social networks. Motivated by this, we adopt a more practical social network model parameterized by overlapping communities, which can serve as side information for de-anonymization. In this work, we derived the cost function of expected number of mismapped users based on Minimum Mean Square Error for the ﬁrst time. Then we proposed an approximate algorithm and ﬁgured out the approximation ratio after simplilfying MMSE by transforming it into a weighted-edge matching problem.
+            Although the seedless de-anonymization problem have been explored by several previous works through various of network models, all those models cannot preciously capture the real social networks. Motivated by this, we adopt a more practical social network model parameterized by overlapping communities, which can serve as side information for de-anonymization. In this work, we derived the cost function of expected number of mismapped users based on Minimum Mean Square Error for the ﬁrst time. After simplilfying the cost function by transforming it into a weighted-edge matching problem, we ﬁgured out the approximation ratio and proposed an approximate algorithm via convex-concave optimization method. 
+            </p>
+            <p>
+              This work is under minor review in <strong>IEEE/ACM Transactions on Networking</strong>.
             </p>
           <p></p>
           </td>
