--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Research Interests</heading>
-            <p>My current research interests span theoretical topics including network science, performance analysis, algorithm and optimization. I am also interested in applications of these areas.
+            <p>My current research interests span theoretical topics including network science, performance modeling, algorithm and optimization. I am also interested in applications of these areas.
             <!--
             :</p>
             <ul>
@@ -237,9 +237,9 @@
             <a href="source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf"><strong>De-anonymizability of Social Network: Through the Lens of Symmetry
 			</strong></a>
             <br>
-            Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Mar. 2019 - Aug. 2019
+            Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Mar. 2019 - Aug. 2019
             <br>
-            This work is advised both by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
+            This work is advised both by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>.
             <br>
             </p>
 
