--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Research Interests</heading>
-            <p>My current research interests span theoretical topics including network science, performance modeling, algorithm and optimization. I am also interested in applications of these areas.
+            <p>My current research interests span theoretical topics including network science, performance modeling, algorithm and optimization. I am also interested in applications of these areas, particularly those pertaining to networked and distributed systems.
             <!--
             :</p>
             <ul>
